# rawr_agent

./: .README.md.swp  .clignore  .clirnore  .gitignore  LICENSE  README.md  README_prompt_suggestions.md  clignore.txt  configs  pyproject.toml
configs/: config.yml
nim_ocr/: README_optional_localOCR.md  start_ocr_nim.sh
nim_ocr/nim_ocr_test/: imgocrtest.py  imgocrtest.sh
report_exports/: report.html
src/rawr_agent/: rawr_agent_function.py  rawr_image_extractor.py  rawr_image_extractor_llm.py  rawr_image_extractor_nimocr.py  rawr_report_templates.py  register.py
src/rawr_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/rawr_agent/configs/: config.yml
src/report_templates/: instant_report.py  monthly_report.py
